[tool.poetry]
name = "test-jinja-load-toml"
version = "1.test"
description = "A test project to make sure conda-build can read toml into its meta.yaml"

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
